--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "dotenv": "^16.4.7",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.4.0",
     "react-toastify": "^11.0.5",
