--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#2196f3",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "./icons8-clouds-48.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "./icons8-clouds-96.png",
       "sizes": "512x512",
       "type": "image/png"
     }
