--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
+    "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
