--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.16",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
